fix: line spacing in header event page

--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -1,18 +1,19 @@
 .header{
     display: flex;
     justify-content: space-between;
-    margin-left: 2rem;
+    margin: 2rem 0 0 2rem;
     border-bottom: .01rem solid $color-background-dark;
-
     align-items: center;
 
     &__title{
-        margin-bottom: -2.7rem;
         font-family: $font-family-display;
         font-size: 13rem;
+        line-height: 15rem;
+        letter-spacing: 0%;
         text-transform: uppercase;
         color: $color-text-dark;
         display: flex;
+
 
         &--all{
             font-weight: 180;
@@ -26,9 +27,11 @@
 
     &__content{
         height: 100%;
-        // padding-top: 7%;
         text-transform: uppercase;
         font-family: $font-family-base;
+        line-height: 4.6rem;
+        letter-spacing: 2%;
         font-size: 1.7rem;
+        font-weight: 500;
     }
 }
